--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -225,13 +225,26 @@ select {
   .show-member .controls {
     height: 3em;
     width: 100%;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
     border-bottom: 1px solid #aaa; }
 
 .member-field {
   width: 100%;
-  margin-bottom: 2em;
+  overflow: auto;
   border-bottom: 1px solid #ccc; }
+
+.field {
+  float: left;
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 1em; }
+
+.value {
+  float: right;
+  display: inline-block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  text-align: right; }
 
 .frame {
   max-width: 100%; }
