--- a/views/showmember.html
+++ b/views/showmember.html
@@ -77,8 +77,8 @@
     {{#member}}
 
     <div class="controls">
-        <a class="button" href="/members/{{ member.id }}/edit">Edit member</a>
-        <a class="button" href="/members/{{ member.id }}/payments">Payment Record</a>
+        <a class="button" href="/members/{{ id }}/edit">Edit member</a>
+        <a class="button" href="/members/{{ id }}/payments">Payment Record</a>
 
         {{#if deleted}}
             <form action="/members/{{id}}/reactivate" method="POST">
