test GET /members/{id}/payments

--- a/views/editpayment.html
+++ b/views/editpayment.html
@@ -42,7 +42,7 @@
     <div class="new-member-form bit50 frame">
 
 
-        <form action="/payments" method="post">
+        <form action="/payments/{{payment.id}}" method="post">
 
             <div class="frame form-address">
                 <div class="amount-description">
