--- a/views/newmember.html
+++ b/views/newmember.html
@@ -27,18 +27,18 @@
             </div>
 
             <div class="frame form-two">
-                <input type="text" name="firstname" placeholder="First name">
-                <input type="text" name="surname" placeholder="Last name">
+                <input type="text" name="firstName" placeholder="First name">
+                <input type="text" name="lastName" placeholder="Last name">
             </div>
 
             <hr>
 
             <div class="frame form-address">
-                <input type="text" name="addressLine1" placeholder="Address line 1">
-                <input type="text" name="addressLine2" placeholder="Address line 2">
-                <input type="text" name="addressLine3" placeholder="Address line 3">
-                <input type="text" name="addressLine4" placeholder="Address line 4">
-                <input type="text" name="addressLine5" placeholder="Address line 5">
+                <input type="text" name="address1" placeholder="Address line 1">
+                <input type="text" name="address2" placeholder="Address line 2">
+                <input type="text" name="address3" placeholder="Address line 3">
+                <input type="text" name="address4" placeholder="Address line 4">
+                <input type="text" name="county" placeholder="County">
             </div>
 
             <div class="frame">
@@ -89,10 +89,10 @@
                     <span id="label">Membership Type</span>
                </div>
                 <div class="input-with-label frame">
-                    <input type="date" name="dateMembershipTypeChanged"><span id="label">Date membership joined</span>
+                    <input type="date" name="dateTypeChanged"><span id="label">Date membership joined</span>
                 </div>
                 <div class="input-with-label frame">
-                    <input type="date" name="dateLifeMembershipPaid"><span id="label">Date life membership paid</span>
+                    <input type="date" name="lifePaymentDate"><span id="label">Date life membership paid</span>
                 </div>
             </div>
 
@@ -101,15 +101,15 @@
             <div class="frame form-gad">
 
                 <div class="input-with-label">
-                    <input type="checkbox" name="gad" value="true"><span id="label">GAD</span>
+                    <input type="checkbox" name="giftAid" value="true"><span id="label">GAD</span>
                 </div>
 
                 <div class="input-with-label">
-                    <input type="date" name="dateGadSigned" value="true"><span id="label">Date GAD Signed</span>
+                    <input type="date" name="dateGiftAidSigned" value="true"><span id="label">Date GAD Signed</span>
                 </div>
 
                 <div class="input-with-label">
-                    <input type="date" name="dateGadCancelled" value="true"><span id="label">Date GAD Cancelled</span>
+                    <input type="date" name="dateGiftAidCancelled" value="true"><span id="label">Date GAD Cancelled</span>
                 </div>
             </div>
 
@@ -117,7 +117,7 @@
 
             <div class="frame">
                 <div class="input-with-label">
-                    <input type="checkbox" name="paysByStandingOrder" value=true><span id="label">Pays by standing order</span>
+                    <input type="checkbox" name="standingOrder" value=true><span id="label">Pays by standing order</span>
                 </div>
                 <div class="input-with-label">
                     <input type="checkbox" name="onlineMember" value="true"><span id="label">Online Member?</span>
