--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -29,6 +29,21 @@
 .left {
   float: left; }
 
+.right {
+  float: right; }
+
+.mr5 {
+  margin-right: 5%; }
+
+.ml5 {
+  margin-right: 5%; }
+
+.pr5 {
+  padding-right: 1em; }
+
+.pl5 {
+  padding-left: 1em; }
+
 [class*='bit'] {
   float: left; }
 
