--- a/views/login.html
+++ b/views/login.html
@@ -1,11 +1,21 @@
-<div class="frame login-form bit25">
+<div class="container-large">
 
-    <form action="/login" method="post">
+	<div class="inner-section-divider-small"></div>
 
-        <input type="text" name="email" tabindex=1 placeholder="email" class="bit1">
-        <input type="password" name="password" tabindex=2 placeholder="password" class="bit1">
-        <input type="submit" tabindex=3 class="bit3">
+	<div class="section-label">
+		<h1>Sign In</h1>
+	</div>
 
-    </form>
+	<div class="inner-section-divider-medium"></div>
 
+	<div class="container-small">
+		<form action="/login" method="post">
+
+			<input type="text" name="email" tabindex=1 placeholder="Email adress">
+			<div class="inner-section-divider-small"></div>
+			<input type="password" name="password" tabindex=2 placeholder="Password">
+			<div class="inner-section-divider-small"></div>
+			<button type="submit" id="button_sign_in" class="btn-primary">Sign in</button>
+		</form>
+	</div>
 </div>
