--- a/assets/css/base/_reset.scss
+++ b/assets/css/base/_reset.scss
@@ -2,4 +2,37 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Crimson Text', Georgia, serif;
+  font-weight: 100;
+}
+
+html, body{
+	height: 100%;
+}
+
+#wrap {
+  min-height: 92%;
+}
+
+footer {
+	margin-top: 80px;
+	height: 50px;
+	width: 100%;
+	bottom: 0;
+	border-top: 1px solid #eee;
+	overflow: hidden;
+	padding-left: 15px;
+	padding-right: 15px;
+	ul {
+		list-style: none;
+	}
+	li {
+		padding-right: 20px;
+		float: left;
+		line-height: 50px;
+	}
+	.rights {
+		float: right;
+		line-height: 50px;
+	}
 }
