--- a/assets/css/components/_navigation.scss
+++ b/assets/css/components/_navigation.scss
@@ -2,18 +2,25 @@
   width: 100%;
   overflow: auto;
   padding: 0.75em;
+  font-size: $meta-font-size-desktop;
   margin-top: 0.5em;
+  border-bottom: 1px solid $general-line-color;
+  margin-bottom: 50px;
   a {
-    background-color: #d88;
     text-decoration: none;
-    color: #000;
+    color: $micro-font-color;
     padding: 0.5em 1.5em;
     border-radius: 2px;
-    border: 1px solid #d88;
     margin: 0.5em;
+    &:hover,
+    &:focus {
+      color: $color-333;
+    }
   }
   .left {
-    float: left; }
+    float: left;
+  }
   .right {
-    float: right; }
+    float: right;
+  }
 }
