--- a/views/adminhome.html
+++ b/views/adminhome.html
@@ -1,25 +1,31 @@
-<div class="admin-home">
+<div class="container-large">
 
     <div class="header">
         <h1>Administration</h1>
     </div>
 
-
-    <div class="frame bit50 admin-controls">
-
-        <a href="/addmember"><input type="button" value="Add Member" class="bit1"></a>
-
-        <div class="frame bit1 search-box">
-            <form action="/members/search" method="POST">
-                <select name="status">
-                    <option value="active" selected>Active</option>
-                    <option value="deleted">Deleted</option>
-                </select>
-                <input type="text" name="query" placeholder="Enter member number or name here" id="search-field">
-                <input type="submit" value="search" id="search-button">
-            </form>
-
-        </div>
+    <div style="margin-bottom:20px;margin-top:20px;">
+        <a href="/addmember">
+            <button id="save_person" class="btn-secondary no-float" type="submit">Add new member</button>
+        </a>
     </div>
 
+    <form style="display: block;overflow: auto;" action="/members/search" method="POST">
+        <div style="float:left;width:20%;padding-right:2%;">
+            <select class="no-margin use-max btn-standard-width" name="status">
+                <option style="color:#ccc;" class="meta" value="" disabled="" selected="">Select one</option>
+                <option value="active">Active</option>
+                <option value="deleted">Deleted</option>
+            </select>
+        </div>
+
+        <div style="float:left;width:60%;">
+            <input type="text" name="query" placeholder="Enter member number or name here" id="search-field">
+        </div>
+
+        <div style="float:right;width:20%;padding-left:2%;">
+            <!-- <input type="submit" value="search" id="search-button"> -->
+            <button id="search-button" class="btn-primary" type="submit">Search</button>
+        </div>
+    </form>
 </div>
