--- a/views/newmember.html
+++ b/views/newmember.html
@@ -1,135 +1,329 @@
+<div class="container-large">
 
-<div class="new-member-container">
+    <h1>New Member Form</h1>
 
-    <div class="new-member-head">
-        <a href="/admin">BACK</a>
-        <h1>New Member Form</h1>
-    </div>
+    <form action="/members" method="post">
 
-    <div class="new-member-form bit50 frame">
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>1. Profile</h2></li>
+            </ul>
+        </div>
 
-
-        <form action="/members" method="post">
-
-            <div class="frame bit1 membershipid">
-                <input type="text" name="id" placeholder="Membership ID">
-            </div>
-
-            <hr>
-
-            <div class="frame bit3 form-short">
-                <input type="text" name="title" placeholder="Title">
-                <input type="text" name="initials" placeholder="Initials" id="initials">
-            </div>
-
-            <div class="frame bit3 form-birthday">
-                <input type="date" name="birthday">
-            </div>
-
-            <div class="frame form-two">
-                <input type="text" name="firstName" placeholder="First name">
-                <input type="text" name="lastName" placeholder="Last name">
-            </div>
-
-            <hr>
-
-            <div class="frame form-address">
-                <input type="text" name="address1" placeholder="Address line 1">
-                <input type="text" name="address2" placeholder="Address line 2">
-                <input type="text" name="address3" placeholder="Address line 3">
-                <input type="text" name="address4" placeholder="Address line 4">
-                <input type="text" name="county" placeholder="County">
-            </div>
-
-            <div class="frame">
-                <input type="text" name="postcode" placeholder="Postcode">
-            </div>
-
-            <hr>
-
-            <div class="frame form-deliverer">
-                <input type="text" name="deliverer" placeholder="Deliverer">
-            </div>
-
-            <hr>
-
-            <div class="frame form-three">
-                <input type="text" name="homePhone" placeholder="Home phone">
-                <input type="text" name="mobilePhone" placeholder="Mobile phone">
-                <input type="text" name="workPhone" placeholder="Work phone">
-            </div>
-
-            <hr>
-
-            <div class="frame form-emails">
-                <input type="text" name="email1" placeholder="Email Address 1">
-                <input type="text" name="email2" placeholder="Email Address 2">
-                <div class="input-with-label">
-                    <input type="checkbox" name="emailBounced" value="true"><span id="label">Email bounced?</span>
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Member id</h3>
                 </div>
+                <input class="short" name="id" placeholder="Membership id">
             </div>
+        </div>
 
-            <hr>
-
-            <div class="frame form-membership">
-                <div class="input-with-label frame">
-                    <input type="date" name="dateJoined"><span id="label">Date joined</span>
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Full name*</h3>
                 </div>
-                <div class="frame">
-                    <select name="membershipType">
-                        <option value="" disabled selected>Membership Type</option>
-                        <option value="Annual Single">Annual Single</option>
-                        <option value="Annual Double">Annual Double</option>
-                        <option value="Annual Family">Annual Family</option>
-                        <option value="Life Single">Life Single</option>
-                        <option value="Life Double">Life Double</option>
-                        <option value="Group Annual">Group Annual</option>
-                        <option value="Corporate Annual">Corporate Annual</option>
-                    </select>
-                    <span id="label">Membership Type</span>
-               </div>
-                <div class="input-with-label frame">
-                    <input type="date" name="dateTypeChanged"><span id="label">Date membership joined</span>
-                </div>
-                <div class="input-with-label frame">
-                    <input type="date" name="lifePaymentDate"><span id="label">Date life membership paid</span>
-                </div>
+                <input class="short" name="firstName" placeholder="First name">
             </div>
+        </div>
 
-            <hr>
-
-            <div class="frame form-gad">
-
-                <div class="input-with-label">
-                    <input type="checkbox" name="giftAid" value="true"><span id="label">GAD</span>
-                </div>
-
-                <div class="input-with-label">
-                    <input type="date" name="dateGiftAidSigned" value="true"><span id="label">Date GAD Signed</span>
-                </div>
-
-                <div class="input-with-label">
-                    <input type="date" name="dateGiftAidCancelled" value="true"><span id="label">Date GAD Cancelled</span>
-                </div>
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <input class="short" name="lastName" placeholder="Last name">
             </div>
+        </div>
 
-            <hr>
-
-            <div class="frame">
-                <div class="input-with-label">
-                    <input type="checkbox" name="standingOrder" value=true><span id="label">Pays by standing order</span>
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Title</h3>
                 </div>
-                <div class="input-with-label">
-                    <input type="checkbox" name="onlineMember" value="true"><span id="label">Online Member?</span>
+                <input class="short" name="title" placeholder="Title">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Date of birthday</h3>
                 </div>
-                <input type="textbox" name="membershipNotes" placeholder="Notes on member">
+                <input class="short" type="date" name="birthday">
             </div>
+        </div>
 
-            <div class="frame form-submit">
-                <input type="submit">
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>2. Address</h2></li>
+            </ul>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Address</h3>
+                </div>
+                <input class="short" name="address1" placeholder="Address line 1">
             </div>
-        </form>
+        </div>
 
-    </div>
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <input class="short" name="address2" placeholder="Address line 2">
+            </div>
+        </div>
 
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <input class="short" name="address3" placeholder="Address line 3">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <input class="short" name="address4" placeholder="Address line 4">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>County</h3>
+                </div>
+                <input class="short-relative left" name="county" placeholder="County name">
+                <input class="short-relative right" name="postcode" placeholder="Postcode">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Deliverer</h3>
+                </div>
+                <input class="short" name="deliverer" placeholder="Deliverer">
+            </div>
+        </div>
+
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>3. Contact online</h2></li>
+            </ul>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Home phone</h3>
+                </div>
+                <input class="short" name="homePhone" placeholder="Home phone">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Mobile phone</h3>
+                </div>
+                <input class="short" name="mobilePhone" placeholder="Mobile phone">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Work phone</h3>
+                </div>
+                <input class="short" name="workPhone" placeholder="Work phone">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Contact primary email</h3>
+                </div>
+                <input class="short" name="email1" placeholder="Primary email">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Contact secondary email</h3>
+                </div>
+                <input class="short" name="email2" placeholder="Secondary email">
+            </div>
+        </div>
+
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Email bounced?</h3>
+                </div>
+                <input type="checkbox" name="emailBounced" value="true">
+                <!-- <select name="emailBounced" class="short" style="color:#ccc;">
+                    <option class="meta" value="" disabled="" selected="">Click to select</option>
+                    <option value="true">Yes</option>
+                    <option value="false">No</option>
+                </select> -->
+            </div>
+        </div>
+
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>4. Membership</h2></li>
+            </ul>
+        </div>
+
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Membership type</h3>
+                </div>
+                <select name="membershipType" class="short" style="color:#ccc;">
+                    <option class="meta" value="" disabled="" selected="">Click to select one</option>
+                    <option value="Annual Single">Annual Single</option>
+                    <option value="Annual Double">Annual Double</option>
+                    <option value="Annual Family">Annual Family</option>
+                    <option value="Life Single">Life Single</option>
+                    <option value="Life Double">Life Double</option>
+                    <option value="Group Annual">Group Annual</option>
+                    <option value="Corporate Annual">Corporate Annual</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Date joined</h3>
+                </div>
+                <input class="short" type="date" name="dateJoined">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Date membership joined</h3>
+                </div>
+                <input class="short" type="date" name="dateTypeChanged">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Date life membership paid</h3>
+                </div>
+                <input class="short" type="date" name="lifePaymentDate">
+            </div>
+        </div>
+
+
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>5. Gift aid</h2></li>
+            </ul>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Gift aid</h3>
+                </div>
+                <input type="checkbox" name="giftAid" value="true">
+                <!-- <select name="giftAid" class="short" style="color:#ccc;">
+                    <option class="meta" value="" disabled="" selected="">Click to select</option>
+                    <option value="true">Yes</option>
+                    <option value="false">No</option>
+                </select> -->
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Date gif aid signed</h3>
+                </div>
+                <input class="short" type="date" name="dateGiftAidSigned">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Date gif aid cancelled</h3>
+                </div>
+                <input class="short" type="date" name="dateGiftAidCancelled">
+            </div>
+        </div>
+
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>6. Payment info</h2></li>
+            </ul>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Pays by standing order</h3>
+                </div>
+                <input type="checkbox" name="standingOrder" value="true">
+                <!-- <select name="standingOrder" class="short" style="color:#ccc;">
+                    <option class="meta" value="" disabled="" selected="">Click to select</option>
+                    <option value="true">Yes</option>
+                    <option value="false">No</option>
+                </select> -->
+            </div>
+        </div>
+
+
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>7. Other</h2></li>
+            </ul>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Online Member</h3>
+                </div>
+                <input type="checkbox" name="onlineMember" value="true">
+                <!-- <select name="onlineMember" class="short" style="color:#ccc;">
+                    <option class="meta" value="" disabled="" selected="">Click to select</option>
+                    <option value="yes">Yes</option>
+                    <option value="no">No</option>
+                </select> -->
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Notes</h3>
+                </div>
+                <textarea name="membershipNotes"></textarea>
+            </div>
+        </div>
+
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>8. Close</h2></li>
+            </ul>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <button id="save_person" class="btn-primary left btn-standard-width" type="submit">Save</button>
+                <a href="javascript:history.back();">
+                    <button id="cancel_person" class="btn-secondary right btn-standard-width">Cancel</button>
+                </a>
+            </div>
+        </div>
+    </form>
 </div>
