--- a/views/newpayment.html
+++ b/views/newpayment.html
@@ -1,147 +1,108 @@
-<style type="text/css">
+<div class="container-large">
 
-    .amount-description {
-        text-align: left;
-        /*width: 35%;*/
-        margin: 0;
-        float: left;
-        margin-top: 9px;
-    }
+    <h1>New Payment</h1>
 
-    .amount {
-        width: 65%;
-        margin: 0;
-        float: right;
-        margin-right: 5%;
-    }
+    <form action="/payments" method="post">
 
-    .note-payment {
-        width: 95%;
-        height: 150px;
-        float: right;
-        margin-right: 5%;
-        font-size: 1em;
-        padding-left: 5px;
-        padding-top: 5px;
-        resize: none;
-        border-color: #ccc;
-    }
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>1. Member</h2></li>
+            </ul>
+        </div>
 
-    .amount-date {
-        float: right; margin-right: 5%; width: 95%;
-    }
-</style>
-
-<div class="new-member-container">
-
-    <div class="new-member-head">
-        <a href="/admin">BACK</a>
-        <h1>New Member Payment</h1>
-    </div>
-
-    <div class="new-member-form bit50 frame">
-
-
-        <form action="/payments" method="post">
-
-            <div class="frame form-address">
-                <div class="amount-description">
-                    <h2>Member id:</h1>
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Member id*</h3>
                 </div>
-                <div class="amount">
-                    <input type="text" name="memberId" placeholder="Membership ID" value="{{ memberId }}">
-                </div>
+                <input class="short" name="memberId" placeholder="Member id" value="{{ memberId }}">
             </div>
-            <hr>
+        </div>
 
-            <div class="frame form-address">
-                <div class="amount-description">
-                    <h2>Date:</h1>
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Date</h3>
                 </div>
-                <div class="amount">
-                    <input style="float: right; margin-right: 5%; width: 95%; margin-bottom: 1em; height: 4em;" type="date" name="datePaid" placeholder="12/12/2014 12:00">
-                </div>
+                <input class="short" type="date" name="datePaid">
             </div>
+        </div>
 
-            <div class="frame form-address">
-                <div class="amount-description">
-                    <h2>Payment Type:</h1>
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>2. Payment details</h2></li>
+            </ul>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Payment type</h3>
                 </div>
-                <div class="amount">
-                    <select style="float: right; margin-right: 5%; width: 95%; margin-bottom: 1em; height: 4em;" name="typeCode">
-                        <option value="" disabled selected>Payment Types</option>
-                        {{#each types}}
-                            <option value="{{this}}">{{this}}</option>
-                        {{/each}}
-                    </select>
-                </div>
+                <select name="typeCode" class="short" style="color:#ccc;">
+                    <option class="meta" value="" disabled="" selected="">Click to select</option>
+                    {{#each types}}
+                        <option value="{{this}}">{{this}}</option>
+                    {{/each}}
+                </select>
             </div>
+        </div>
 
-            <hr>
-
-            <div class="frame form-address">
-                <div class="amount-description">
-                    <h2>Subscription:</h1>
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Subscription</h3>
                 </div>
-                <div class="amount">
-                    <input type="number" name="subscription" placeholder="Enter amount">
-                </div>
+                <input class="short" name="subscription" placeholder="Enter subscription amount">
             </div>
-            
-            <div class="frame form-address">
-                <div class="amount-description">
-                    <h2>Donation:</h1>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Donation</h3>
                 </div>
-                <div class="amount">
-                    <input type="number" name="donation" placeholder="Enter amount">
-                </div>
+                <input class="short" name="donation" placeholder="Enter donation amount">
             </div>
+        </div>
 
-            <div class="frame form-address">
-                <div class="amount-description">
-                    <h2>Events:</h1>
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Events</h3>
                 </div>
-                <div class="amount">
-                    <input type="number" name="events" placeholder="Enter amount">
-                </div>
+                <input class="short" name="events" placeholder="Enter event amount">
             </div>
+        </div>
 
-            <hr>
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>3. Others</h2></li>
+            </ul>
+        </div>
 
-            <!-- <div class="frame form-address">
-                <div class="amount-description">
-                    <h2>Total:</h1>
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Notes</h3>
                 </div>
-                <div class="amount">
-                    <input type="text" name="subscription" placeholder="Enter amount">
-                </div>
-            </div> -->
-
-            <div class="frame form-address">
-                <div class="amount-description">
-                    <h2>List reference:</h1>
-                </div>
-                <div class="amount">
-                    <input type="text" name="listReference" placeholder="Enter amount">
-                </div>
+                <textarea name="notes"></textarea>
             </div>
+        </div>
 
-            <div class="frame form-emails">
-                <div class="amount-description">
-                    <h2>Notes:</h1>
-                </div>
-                <div class="amount">
-                    <textarea class="note-payment" name="notes"></textarea>
-                </div>
+        <div class="topSectionDividor">
+            <ul>
+                <li><h2>4. Close</h2></li>
+            </ul>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <button id="save_person" class="btn-primary left btn-standard-width" type="submit">Save</button>
+                <a href="javascript:history.back();">
+                    <button id="cancel_person" class="btn-secondary right btn-standard-width">Cancel</button>
+                </a>
             </div>
-
-            <hr>
-
-            <div class="frame form-submit">
-                <input type="submit">
-            </div>
-        </form>
-
-    </div>
-
+        </div>
+    </form>
 </div>
